# patent_pipeline

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.lightonocr  Dockerfile.patent-extraction-vllm  Dockerfile.slm-mistral31  Dockerfile.slm-mistral31-static  Dockerfile.slm-mistral31-vllm  LICENSE  README.md  batch_benchmark.csv  pyproject.toml  requirements.slm-mistral31-vllm.txt  requirements.slm-mistral31.txt  test_extraction.py  test_preprocess_image.ipynb  test_timing_doctr.py
data/: ocr_report.csv
data/predictions/: predictions_all.jsonl
docs/: troubleshooting.md
envs/lighton/: pyproject.toml
output/: patent_extractions.jsonl
patent-ocr/notebooks/: missing_data_summary.csv
scripts/: bench_ch500_tesserocr_compare.py  bench_compare_hf_vllm.py  bench_ocr_proxy_metrics.py  bench_run_extract.py  bench_run_extract_vllm_spawn.py  bench_run_ocr.py  bench_score_extraction.py  bench_score_ocr.py  build_docker_lightonocr.sh  build_docker_patent_extraction_vllm.sh  build_docker_slm_mistral31.sh  build_docker_slm_mistral31_static.sh  build_docker_slm_mistral31_vllm.sh  build_gold_standard_ch.py  compare_tesseract_wrappers.py  plot_ch500_feature_presence.py  run_azure.sh  run_ch500_lightonocr.sh  run_ch500_tesserocr.sh  run_ch_extract_mistral7b_mlx.sh  run_ch_extract_vm_mistral31.sh  run_local.sh  run_patent_extraction.py  run_vm_patent_extraction_vllm.sh  run_vm_real500_mistral31_vllm.sh  select_extract_ch_sample.py  ship_docker_image_to_vm.sh  smoke_lightonocr_batch.py  smoke_ministral3.py  vm_smoke_mistral31.sh  vm_smoke_mistral31_static.sh  vm_smoke_mistral31_vllm.sh
src/patent_extraction/: __init__.py  config.py  extractor.py  guardrails.py  models.py  postprocess.py  profiles.py  prompt_templates.py  runtime.py  strategies.py
src/patent_extraction/cli/: __init__.py  run_extract.py
src/patent_extraction/profile_defs/: de_legacy_v4.json  swiss_v2.json  swiss_v3.json
src/patent_pipeline/: __main__.py  pipeline.py
src/patent_pipeline/patent_ocr/: custom_segmentation.py  deskewer.py  ocr_utils.py  pipeline_modular.py
src/patent_pipeline/patent_ocr/backends/: deps.py  doctr_backend.py  glm_ocr_vllm_backend.py  got_ocr_backend.py  lightonocr_backend.py  paddleocr_backend.py  surya_backend.py  tesseract_backend.py  tesserocr_backend.py  trocr_backend.py
src/patent_pipeline/patent_ocr/utils/: image_preprocess.py
src/patent_pipeline/pydantic/: hf_agent.py  models.py  prompt_templates.py
src/patent_pipeline/pydantic_extraction/: guardrails.py  hf_agent.py  llm_extraction_agent.py  models.py  patent_extractor.py  postprocess.py  prompt_templates.py  runtime.py  strategies.py
src/patent_pipeline/utils/: device_utils.py
tests/: __init__.py  test_bench_compare_hf_vllm_smoke.py  test_bench_run_extract_smoke.py  test_glm_ocr_vllm_backend.py  test_guardrails.py  test_patent_extraction_profiles.py  test_patent_extraction_runner.py  test_patent_extractor_generate_kwargs.py  test_patent_extractor_model_routing.py  test_patent_extractor_postprocess.py  test_patent_extractor_runtime_options.py  test_pipeline_ocr_batching.py
