[project]
name = "patent-pipeline"
version = "0.1.0"
description = ""
authors = [
  { name = "ph delville", email = "phdelville33@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

# ========== MAIN (runtime) ==========
# Doit suffire pour:
# - scripts/bench_run_ocr.py
# - scripts/bench_run_extract.py
# - le code src/patent_pipeline/*
dependencies = [
  # --- Core
  "pydantic (>=2.12.3,<3.0.0)",
  "tqdm (>=4.67.1,<5.0.0)",
  "loguru (>=0.7.3,<0.8.0)",

  # --- OCR runtime
  "pillow (>=12.0.0,<13.0.0)",
  "pytesseract (>=0.3.13,<0.4.0)",
  "pdf2image (>=1.17.0,<2.0.0)",
  "pymupdf (>=1.26.6,<2.0.0)",
  "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
  "langdetect (>=1.0.9,<2.0.0)",
  "python-doctr[torch] (>=1.0.0,<2.0.0)",
  "easyocr (>=1.7.2,<2.0.0)",

  # --- LLM runtime
  "torch (>=2.9.0,<3.0.0)",
  "transformers (>=4.57.1,<5.0.0)",
  "accelerate (>=1.11.0,<2.0.0)",
  "sentencepiece (>=0.2.1,<0.3.0)",

  # --- Mac MLX (OK de le laisser en main si tu veux 1 seul env local)
  "mlx-lm (>=0.28.3,<0.29.0)",

  # --- Important: ton code utilise `import regex as re`
  "regex (>=2024.0.0,<2026.0.0)",
]

[tool.poetry]
packages = [{ include = "patent_pipeline", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ========== GROUPS ==========
# bench = scripts de scoring/metrics (pandas)
# dev   = notebooks / UI locale / expérimental
[dependency-groups]

bench = [
  "pandas (>=2.3.3,<3.0.0)",
]

dev = [
  "ipykernel (>=7.0.1,<8.0.0)",
  "matplotlib (>=3.10.7,<4.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "pyqt5 (>=5.15.11,<6.0.0)",
  "streamlit (>=1.51.0,<2.0.0)",
  "streamlit-image-zoom (>=0.0.4,<0.0.5)",

  # Lourd / fragile (à activer consciemment)
  "layoutparser (>=0.3.4,<0.4.0)",
]
