[project]
name = "patent-pipeline-lighton"
version = "0.1.0"
description = "Env LightOnOCR (transformers depuis git) pour patent-pipeline"
requires-python = ">=3.12,<3.15"

# Dépendances standards
dependencies = [
    "pydantic>=2.12.3,<3.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "loguru>=0.7.3,<0.8.0",
    "pillow>=11.0.0,<13.0.0", # Attention, v12 n'existe pas encore, j'ai ajusté
    "pytesseract>=0.3.13,<0.4.0",
    "pdf2image>=1.17.0,<2.0.0",
    "pymupdf>=1.26.6,<2.0.0",
    "opencv-python-headless>=4.10.0,<5.0.0",
    "langdetect>=1.0.9,<2.0.0",
    "easyocr>=1.7.2,<2.0.0",
    "torch>=2.5.0,<3.0.0",
    "accelerate>=1.0.0,<2.0.0",
    "sentencepiece>=0.2.1,<0.3.0",
    "mlx-lm>=0.20.0,<0.22.0; sys_platform == 'darwin'", # Installé uniquement sur macOS
    "regex>=2024.0.0,<2026.0.0",
    "huggingface-hub>=1.3.0,<2.0.0",
    "numpy (>=2.4.1,<3.0.0)",
]

[tool.poetry]
# C'est ici qu'on gère le "non-standard" (Git et Local Path)
# Le 'develop = true' équivaut au mode --editable
package-mode = false

[tool.poetry.dependencies]
# Installation du projet principal en mode éditable
patent-pipeline = { path = "../../", develop = true }

# Transformers depuis Git
transformers = { git = "https://github.com/huggingface/transformers.git", branch = "main" }

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
